--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,14 @@ plugins {
 	id 'jacoco'
 }
 
+tasks.withType(Jar).configureEach {
+    manifest {
+        attributes(
+                'Main-Class': 'co.com.franchise.MainApplication'
+        )
+    }
+}
+
 sonar {
     def modules = subprojects.projectDir.collect { "${it.toString().replace(project.projectDir.toString() + "/", "")}" }
     properties {
